--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -23,4 +23,91 @@ $break-large: 1440px
 	margin:0
 	padding:0
 	box-sizing: border-box
+	font-family: $body-font
+
+h1
+	font-family: $heading-font
+
+p
+	font-size: $body-font-size
+	font-weight: $body-weight
+
+
+header
+	display: flex
+	justify-content: space-between
+	padding: 30px
+
+.container
+	margin: 0 50px 
+	padding: 30px
+
+.btn 
+	border-radius: 2px
+	box-shadow: 0px 0px 5px black
+	border: none
+	padding: 10px
+	display: inline-block
+	&--small 
+		width: 130px
+	&--large
+		width: 200px
+	&--light
+		background-color: white
+		color: $secondary-color
+	&--purple
+		background-color: $primary-color
+		color: white
+
+.mockup
+	height:300px
+	&-main 
+		margin: 25px auto
+		display: block
+	
+
+
+.banner__content
+	display: flex
+	flex-direction: column
+	& > * 
+		margin-top: 20px
+		display: block
+		align-items: center
+		text-align: center
+	& > .btn
+		margin: 30px auto
+
+.users
+	display: flex
+
+
+
+.users__content__item
+	margin-top: 30px
+
+
+.main-footer
+	display: flex
+	background-color: $VeryDarkCyan
+	width: 100%
+	color: white
+	& > *
+		flex-basis: 33%
+		padding: 10px
+		margin-top: 55px
+		margin-bottom: 100px
+	.pages-list 
+		ul
+			li
+				list-style: none
+
+
+
+.footer
+
+	&__icon
+		font-size: 30px
+		margin: 10px 15px
+
 
