--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@
   font-family: "Open Sans", sans-serif;
 }
 
+html, body {
+  width: 100%;
+}
+
+body {
+  background-color: #f7f9fd;
+}
+
 h1 {
   font-family: "Poppins", sans-serif;
 }
@@ -20,6 +28,29 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 30px;
+}
+
+.block {
+  position: absolute;
+  border-radius: 30px;
+  z-index: -1;
+}
+.block--light {
+  background: white;
+  height: 940px;
+  width: 500px;
+  transform: rotate(80deg);
+  right: 448px;
+  z-index: -2;
+  top: 54px;
+}
+.block--gradient {
+  background: linear-gradient(#ff52bf, #9a52ff);
+  transform: rotate(-45deg);
+  height: 1000px;
+  width: 1000px;
+  top: -453px;
+  right: -453px;
 }
 
 .container {
@@ -65,6 +96,11 @@ header {
   display: flex;
   flex-direction: column;
 }
+.banner__content p {
+  display: block;
+  width: 50%;
+  margin: 10px auto 0px auto;
+}
 .banner__content > * {
   margin-top: 20px;
   display: block;
@@ -80,6 +116,7 @@ header {
 }
 
 .cta {
+  background: #fff;
   width: 700px;
   margin: 150px auto 50px auto;
   border-radius: 5px;
