--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -22,6 +22,14 @@ $break-large: 1440px
 	padding:0
 	box-sizing: border-box
 	font-family: $body-font
+	// z-index: 1
+
+html, body
+	width: 100%
+
+body 
+	background-color: $LightGrayishBlue
+
 
 h1
 	font-family: $heading-font
@@ -37,6 +45,26 @@ header
 	display: flex
 	justify-content: space-between
 	padding: 30px
+
+.block
+	position: absolute
+	border-radius: 30px
+	z-index: -1
+	&--light
+		background: white
+		height: 940px
+		width: 500px
+		transform: rotate(80deg)
+		right: 448px
+		z-index: -2
+		top: 54px
+	&--gradient
+		background: linear-gradient($primary-color, $secondary-color)
+		transform: rotate(-45deg)
+		height: 1000px
+		width: 1000px
+		top: -453px
+		right: -453px
 
 .container
 	margin: 0 50px 
@@ -71,6 +99,10 @@ header
 .banner__content
 	display: flex
 	flex-direction: column
+	p
+		display: block
+		width: 50%
+		margin: 10px auto 0px auto
 	& > * 
 		margin-top: 20px
 		display: block
@@ -83,6 +115,7 @@ header
 	display: flex
 
 .cta
+	background: #fff
 	width: 700px
 	margin: 150px auto 50px auto
 	border-radius: 5px
